--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "angular": "^1.7.0",
     "bootstrap": "^4.1.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.2.2"
   },
   "devDependencies": {
     "ajv": "^6.4.0",
